# swc-remove-invalid-content-plugin

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: npm-publish.yml
src/: lib.rs
tests/: index.spec.ts  test.js  transformed-es.js  transformed.js
